[package]
name = "rustybot"
version = "0.1.0"
authors = ["rookmate <14072042+rookmate@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.13.6"
log = "0.4"
log4rs = "0.10.0"
regex = "1.3.7"
